# Project-Euler-Solutions

./: 1primetools.c  2primetools.c  2project.hs  3_1project.c  3project.c  4project.cpp  5_1project.py  5project.py  6project.hs  7project.c  README.md  primetools.c
9project/: 9project.cabal  CHANGELOG.md
9project/app/: Main.hs
9project/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
